Changed flaws with the templates and updated the readme

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,6 +2,7 @@
 - name: Update repositories cache and install "php" package
   apt:
     name: php-fpm
+    update_cache: yes
   when: ansible_pkg_mgr == "apt"
 
 - name: Get php version number
