Changed defaults so they can not be overidden
and fixed all michels stuff

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -17,8 +17,7 @@
     path: /etc/php/{{ php_version }}/php.ini
     marker: "; {mark} ANSIBLE MANAGED BLOCK"
     backup: yes
-    block: |
-      {{ item.name}} {{ item.value }}
+    block: {{ item.name}} {{ item.value }}
   with_items: "{{ php_ini_values }}"
 
 - name: Create php-fpm.conf
