--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,5 @@
 ---
-include: "*.conf"
-include_pools: "pool.d/*.conf"
+php_version: "7.0"
 pid: /run/php-fpm.pid
 error_log: log/php-fpm.log
 log_level: notice
@@ -17,7 +16,6 @@ systemd_interval: 10
 listen_backlog: -1
 listen_allowed_clients: any
 listen_mode: 0660
-pm_start_servers: min_spare_servers + (max_spare_servers - min_spare_servers) / 2
 pm_process_idle_timeout: 10s
 pm_max_requests: 0
 ping_response: pong
@@ -26,7 +24,7 @@ request_slowlog_timeout: 0
 slowlog: log/php-fpm.log.slow
 catch_workers_output: no
 clear_env: Yes
-security_limit_extensions: .php, .phar
+security_limit_extensions: .php .phar
 access_format: "%R - %u %t \"%m %r\" %s"
 php_ini_values:
   expose_php: 0
