Move updating repository cache to its own task

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,8 +1,12 @@
 ---
-- name: Update repositories cache and install "php" package
+- name: Update repositories cache
+  apt:
+    update_cache: yes
+  changed_when: false
+  
+- name: Install "php" package
   apt:
     name: php-fpm
-    update_cache: yes
   when: ansible_pkg_mgr == "apt"
 
 - name: Get php version number
