--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,37 +10,42 @@
     name: php-fpm
   when: ansible_pkg_mgr == "apt"
 
-- name: Get php version number
-  find:
-    path: "/etc/php/" 
-    patterns: "*" 
-    file_type: directory
-  register: php_version
+- name: delete default php-fpm pool.conf
+  file:
+    path: "/etc/php/{{ php_version }}/fpm/pool.d/www.conf"
+    state: absent
 
 - name: Update php.ini
   blockinfile:
-    path: /etc/php/{{ php_version }}/php.ini
+    path: "/etc/php/{{ php_version }}/fpm/php.ini"
     marker: "; {mark} ANSIBLE MANAGED BLOCK"
     backup: yes
-    block: {{ item.name}} {{ item.value }}
-  with_items: "{{ php_ini_values }}"
+    block: |
+     {% for key in php_ini_values.keys() %}
+      {% for value in php_ini_values[key]%}
+        {{ key }}={{ value }}
+      {% endfor %} 
+     {% endfor %}
+  register: reload_php
 
 - name: Create php-fpm.conf
   template:
     src: templates/php-fpm.conf.j2
-    dest: /etc/php/{{ php_version }}/fpm/php-fpm.conf
+    dest: "/etc/php/{{ php_version }}/fpm/php-fpm.conf"
+  register: reload_php
 
 - name: Create php-fpm pool.confs
   template:
     src: templates/pool.conf.j2
-    dest: /etc/php/{{ php_version }}/fpm/pool.d/{{ pool.name }}.conf
+    dest:  "/etc/php/{{ php_version }}/fpm/pool.d/{{ pool.name }}.conf"
   with_items: "{{ pools }}"
   loop_control:
     loop_var: pool
+  register: reload_php
 
 - name: Enable and start php-fpm
   systemd:
-    name: php-fpm.service
-    state: started
+    name: "php{{ php_version }}-fpm.service"
+    state: reloaded
     enabled: True
-  when: ansible_service_mgr == "systemd"
+  when: ansible_service_mgr == "systemd" and reload_php.changed
