--- a/meta/main.yml
+++ b/meta/main.yml
@@ -14,7 +14,7 @@ galaxy_info:
         - yakkety
     - name: Debian
       versions:
-        - jessie
+        - stretch
 
   galaxy_tags:
     - stuvus
