Allow to set PHP values per pool; refactor and document role

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -11,7 +11,8 @@ galaxy_info:
   platforms:
     - name: Ubuntu
       versions:
-        - yakkety
+        - xenial
+        - bionic
     - name: Debian
       versions:
         - stretch
