--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,11 @@
 ---
+php_fpm_disable_cron: False
+
+php_fpm_php_ini_values:
+  PHP:
+    expose_php:
+      - 0
+
 php_fpm_php_version: "7.0"
 php_fpm_pid: /run/php-fpm.pid
 php_fpm_error_log: log/php-fpm.log
@@ -9,12 +16,15 @@ php_fpm_emergency_restart_threshold: 0
 php_fpm_emergency_restart_interval: 0
 php_fpm_process_control_timeout: 0
 php_fpm_process_max: 0
-php_fpm_daemonize: Yes
+php_fpm_daemonize: True
 php_fpm_rlimit_files: 16400
 php_fpm_rlimit_core: 0
 php_fpm_systemd_interval: 10
+
+# Pool config defaults
 php_fpm_listen_backlog: -1
-php_fpm_listen_allowed_clients: any
+php_fpm_listen_allowed_clients:
+  - any
 php_fpm_listen_mode: 0660
 php_fpm_pm_process_idle_timeout: 10s
 php_fpm_pm_max_requests: 0
@@ -22,12 +32,9 @@ php_fpm_ping_response: pong
 php_fpm_request_terminate_timeout: 0
 php_fpm_request_slowlog_timeout: 0
 php_fpm_slowlog: log/php-fpm.log.slow
-php_fpm_catch_workers_output: no
-php_fpm_clear_env: Yes
-php_fpm_security_limit_extensions: .php .phar
+php_fpm_catch_workers_output: False
+php_fpm_clear_env: True
+php_fpm_security_limit_extensions:
+  - .php
+  - .phar
 php_fpm_access_format: "%R - %u %t \"%m %r\" %s"
-php_fpm_php_ini_values:
-  PHP:
-    expose_php:
-      - 0
-php_fpm_disable_cron: false
