defaults: Use string instead of Integer for file access mode

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -25,7 +25,7 @@ php_fpm_systemd_interval: 10
 php_fpm_listen_backlog: -1
 php_fpm_listen_allowed_clients:
   - any
-php_fpm_listen_mode: 0660
+php_fpm_listen_mode: "0660"
 php_fpm_pm_process_idle_timeout: 10s
 php_fpm_pm_max_requests: 0
 php_fpm_ping_response: pong
