feat(install): Add ability to configure which package is installed

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Install php package
   apt:
-    name: php-fpm
+    name: "{{ php_fpm_package_name }}"
 
 - name: Auto determinate php version
   shell: php --version | grep '^PHP' | sed 's/^PHP \([0-9]*\.[0-9]*\).*/\1/g'
