chore(main.yml, update_php_uni.yml) replace DEPRECATED ansible.builtin.include
ERROR! [DEPRECATED]: ansible.builtin.include has been removed. Use include_tasks or import_tasks instead. This feature was removed from ansible-core in a release after 2023-05-16. Please update your playbooks.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -21,7 +21,7 @@
     state: absent
 
 - name: Update php.ini
-  include: update_php_ini.yml
+  include_tasks: update_php_ini.yml
   with_dict: "{{ php_fpm_php_ini_values }}"
   loop_control:
     loop_var: section
